# poisson-rs

./: Cargo.toml
poisson/: Cargo.toml
src/: lib.rs
src/algorithm/: bridson.rs  ebeida.rs
src/utils/: mod.rs
tests/: adding.rs  dim2.rs  validity.rs
tests/helper/: mod.rs
